@@ -28,6 +28,8 @@ Bugs fixed
   Thanks to tychoish.
 * #1188: sphinx-quickstart raises UnicodeEncodeError if "Project version"
   includes non-ASCII characters.
+* #1189: "Title underline is short" WARNING is given when using fullwidth
+  characters to "Project name" on quickstart.
 
 
 Release 1.2 (beta1 released Mar 31, 2013)
